# hgvs-parser

./: .gitignore  .readthedocs.yaml  .travis  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: .readthedocs.yml  _config.yml  api.rst  cli.rst  conf.py  credits.rst  grammar.rst  index.md  index.rst  install.rst  installation.md  library.md  library.rst  usage.md  usage.rst
docs/api/: convert.rst  hgvs_parser.rst
ebnf/: hgvs_mutalyzer.g  hgvs_mutalyzer_3.g  hgvs_mutalyzer_open.g  hgvs_mutalyzer_temp.g
hgvsparser/: __init__.py  checks.py  cli.py  exception_handlers.py  exceptions.py  hgvs_parser.py  pyparsing_based_parser.py  to_description.py  to_model.py  transform.py
hgvsparser/ebnf/: hgvs_mutalyzer.g  hgvs_mutalyzer_3.g  hgvs_mutalyzer_open.g
mutalyzer_hgvs_parser/: __init__.py  cli.py  convert.py  exceptions.py  hgvs_parser.py  mutalyzer_hgvs_parser.py  protein.py  util.py
mutalyzer_hgvs_parser/ebnf/: dna.g  hgvs_mutalyzer_3.g  protein.g  reference.g
scripts/: check.py
tests/: test_ambig.py  test_convert.py  test_hgvs_parser.py  test_protein.py  test_pyparsingparser.py  test_syntax.py  test_to_description.py  test_transform.py
